--- a/package.json
+++ b/package.json
@@ -9,37 +9,35 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.1.0",
-    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
-    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.9.3",
     "axios": "^0.20.0",
-    "babel-plugin-inline-dotenv": "^1.6.0",
-    "expo": "~39.0.2",
-    "expo-font": "~8.3.0",
-    "expo-status-bar": "~1.0.2",
-    "moviedb-promise": "^3.1.2",
+    "expo": "^42.0.0",
+    "expo-font": "~9.2.1",
+    "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-shimmer-placeholder": "^2.0.6",
-    "react-native-web": "~0.13.12"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-shimmer-placeholder": "^2.0.7",
+    "react-native-web": "~0.13.12",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/node": "^14.14.0",
+    "@types/node": "^14.17.5",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
-    "eslint": "^7.11.0",
-    "prettier": "^2.1.2",
-    "typescript": "~3.9.5"
+    "eslint": "^7.31.0",
+    "prettier": "^2.3.2",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
