--- a/package.json
+++ b/package.json
@@ -9,24 +9,26 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.1.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.9.3",
     "axios": "^0.20.0",
     "expo": "^42.0.0",
+    "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-dotenv": "^3.1.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-shimmer-placeholder": "^2.0.7",
-    "react-native-web": "~0.13.12",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
