--- a/package.json
+++ b/package.json
@@ -41,10 +41,19 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "eslint": "^7.31.0",
-    "jest": "^27.0.6",
+    "jest-expo": "^42.0.1",
     "prettier": "^2.3.2",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "16.13.1",
     "typescript": "~4.0.0"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "setupFiles": [
+      "<rootDir>/jest.setup.ts"
+    ],   
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ]
   },
   "private": true
 }
